# 2d_game

./: .gitignore  CMakeLists.txt  start.sh
src/: MainLoop.cpp  MainLoop.hpp  main.cpp
src/HUD/: Component.cpp  Component.hpp  Draggable.cpp  Draggable.hpp  Image.cpp  Interactable.cpp  Interactable.hpp  Layer.cpp  Layer.hpp
src/HUD/draggable/: InventorySlot.cpp  InventorySlot.hpp
src/HUD/inventory/: InventoryItem.cpp  InventoryItem.hpp  InventorySlot.cpp  InventorySlot.hpp
src/HUD/layers/: InventoryLayer.cpp  InventoryLayer.hpp
src/SDL/: App.cpp  Renderer.cpp  Renderer.hpp  Surface.cpp  Texture.cpp  Texture.hpp
src/components/: Collider.hpp  Inventory.hpp  Player.hpp  Relationship.hpp  Sprite.hpp
src/components/tags/: Button.hpp  GUI.hpp
src/entities/: boxEntity.cpp  boxEntity.hpp  inventoryEntity.cpp  inventoryEntity.hpp  itemSlot.cpp  itemSlot.hpp  playerEntity.cpp  playerEntity.hpp
src/items/: ItemsDefs.hpp
src/systems/: AnimationSystem.cpp  CollisionSystem.cpp  CollisionSystem.hpp  InventorySystem.cpp  InventorySystem.hpp  MovementSystem.cpp  PlayerMovement.cpp  PlayerMovement.hpp  RenderSystem.cpp  RenderSystem.hpp
src/utils/: FrameTimer.cpp  FrameTimer.hpp  Rect.hpp  TexturesLoader.cpp  TexturesLoader.hpp  TransformUtils.cpp  Vec.cpp  Vec.hpp
